# infinit

./: .coverage  .gitignore  README.md  pyproject.toml
infinit/: cli.py
infinit/core/: builder.py  templates.py
myproj/: README.md
tests/: test_builder.py
