[project]
name = "infinit"
version = "0.1.1"
authors = [
    { name="hoverdd", email="lenyamenshov@gmail.com"}
]
description = "Minimal project scaffolder for hackers"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.8",
]

[project.scripts]
infinit = "infinit.cli:cli"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

